# react-native-media-toolkit

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.vi.md  LICENSE  MediaToolkit.podspec  README.md  README.vi.md  nitro.json  package.json  react-native.config.js  test.kt  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: bump-version.yml  ci.yml  release.yml
.yarn/patches/: expo-video-npm-3.0.16-8037695497.patch  react-native-vision-camera-npm-5.0.6-a38311fe39.patch  react-native-vision-camera-npm-5.0.6-v2.patch  react-native-vision-camera-npm-5.0.6-v3.patch  react-native-vision-camera-npm-5.0.6-v4.patch
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/mediatoolkit/: AnimatedGifEncoder.java  HybridMediaToolkit.kt  ImageProcessor.kt  LZWEncoder.java  MediaToolkitException.kt  MediaToolkitModule.kt  MediaToolkitPackage.kt  NeuQuant.java  VideoProcessor.kt
example/: app.json  package.json
example/patches/: react-native-vision-camera+5.0.6.patch
example/plugins/: withMediaToolkitAndroid.js
example/src/: App.tsx  theme.ts  types.ts
example/src/components/: ActionBtn.tsx  CropOverlay.tsx  VideoTrimBar.tsx
example/src/screens/: CropImageScreen.tsx  CropVideoScreen.tsx  MultiProcessScreen.tsx  RecordVideoScreen.tsx  TrimAndCropVideoScreen.tsx  TrimVideoScreen.tsx
ios/: HybridMediaToolkit.swift  ImageProcessor.swift  MediaToolkit.h  MediaToolkit.mm  MediaToolkitErrors.swift  VideoProcessor.swift
src/: MediaToolkit.nitro.ts  NativeMediaToolkit.ts  index.ts  multiply.native.tsx
